# vulkan-project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  first_app.cpp  index.html  oys_window.cpp  oys_window.hpp  structoys_1_1SimplePushConstantData-members.html  structoys_1_1SimplePushConstantData.html  vulkan-project.sln  vulkan-project.vcxproj  vulkan-project.vcxproj.filters
.github/workflows/: ci.yml  cmake-multi-platform.yml  cmake-multi-platform.yml.rej
html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  structoys_1_1SimplePushConstantData.html
html/search/: classes_0.js
include/: first_app.hpp  oys_camera.hpp  oys_device.hpp  oys_game_object.hpp  oys_model.hpp  oys_pipeline.hpp  oys_renderer.hpp  oys_swap_chain.hpp  oys_window.hpp  simple_render_system.hpp
include/core/: application.hpp
include/vulkan/: pipeline.hpp  swapchain.hpp  vulkan_device.hpp  vulkan_instance.hpp
include/window/: window.hpp
latex/: annotated.tex  refman.tex  structoys_1_1SimplePushConstantData.tex
search/: all_0.js
shaders/: CMakeLists.txt  simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/: CMakeLists.txt  first_app.cpp  first_app.hpp  main.cpp  oys_camera.cpp  oys_device.cpp  oys_model.cpp  oys_pipeline.cpp  oys_renderer.cpp  oys_swap_chain.cpp  oys_window.cpp  simple_render_system.cpp
src/core/: application.cpp
src/vulkan/: pipeline.cpp  swapchain.cpp  vulkan_device.cpp  vulkan_instance.cpp
src/window/: window.cpp
tests/: CMakeLists.txt  test_my_program.cpp
vulkan-project/Debug/: vc143.idb
vulkan-project/Debug/vulkan-project.tlog/: vulkan-project.lastbuildstate
vulkan-project/x64/Debug/: vc143.idb  vulkan-project.exe.recipe  vulkan-project.ilk
vulkan-project/x64/Debug/vulkan-project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  vulkan-project.lastbuildstate
